# bishe

./: .gitignore  AGENTS.md  BERT_TRAINING_GUIDE.md  BERT_UPGRADE.md  README.md
backend/: .env-example  README.md  main.py  pyproject.toml  requirements.txt  sitecustomize.py  update_pending_emails.py
backend/app/: main.py
backend/app/core/: app_factory.py  config.py  container.py  database.py
backend/app/crud/: email_account_crud.py  email_crud.py  email_sync_crud.py  mailbox_crud.py  phishing_rule_crud.py  sender_whitelist_crud.py  system_settings_crud.py  url_whitelist_crud.py  user_crud.py
backend/app/entities/: email_account_entity.py  email_body_entity.py  email_entity.py  email_recipient_entity.py  mailbox_entity.py  mailbox_message_entity.py  phishing_rule_entity.py  sender_whitelist_entity.py  system_settings_entity.py  url_whitelist_entity.py  user_entity.py
backend/app/middleware/: __init__.py  jwt_auth.py
backend/app/routers/: admin_router.py  auth_router.py  bert_training_router.py  email_account_router.py  email_router.py  health_router.py  phishing_router.py  phishing_rule_router.py
backend/app/schemas/: admin_schema.py  auth_schema.py  email_account_schema.py  email_schema.py  phishing_rule_schema.py  phishing_schema.py
backend/scripts/: add_normal_samples.py  init_database.py  init_db.py  init_whitelist.py  migrate_add_rule_detection.py  migrate_phishing_rules.py  train_bert_phishing_model.py  train_phishing_model.py  upgrade_to_bert.py
backend/static/: confusion_matrix.npy  pr_data.npz  roc_data.npz  training_history.csv
(+99 files in other folders)
