[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.19.0",
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
    "aiosmtplib>=3.0.0",
    "aioimaplib>=1.1.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "tensorflow>=2.15.0",
    "keras>=3.0.0",
    "python-multipart>=0.0.22",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=1.1.0",
    "sentencepiece>=0.2.1",
]
